# some_payment_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 12c61edb34a4_create_orders_and_payments_tables.py
app/: main.py
app/api/v1/: orders.py  payments.py
app/core/: config.py
app/core/domain/: enums.py  exceptions.py
app/db/: engine.py
app/db/models/: __init__.py  base.py  order.py  payment.py
app/repo/: order_repo.py  payment_repo.py
app/schemas/: order.py  payment.py
app/scripts/: seed.py
app/service/: order_service.py  payment_service.py
tests/: conftest.py
tests/services/: test_order_service.py  test_payment_service.py
