[tool.poetry]
name = "order-payments-service"
version = "0.1.0"
description = "Test assignment: order payments service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.16.0"
pydantic = "^2.11.0"
httpx = "^0.28.0"
pydantic-settings = "^2.13.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]